// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with filtering 1`] = `
[
  "/Users/acowan/projects/salman/fnjoin.com/content/authors/acowan.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/authors/smalik.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2021-08-27-show-deployments.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2021-09-08-show-deployments-async.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2021-09-11-running-in-cluster.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2021-11-28-creating-images.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2021-11-28-how-many-deployments-amazon-does-in-a-day.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2021-12-04-accelerate-with-feature-flags.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2021-12-18-live-config-updates-spring-configmaps.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2022-01-03-k8s-event-handling.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2022-02-07-fav-k8s-cli-tool.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2022-03-20-fast-java-startup.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2022-11-08-k8s-controller-java.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2022-12-10-cdk-ec2-encrypted-root-disk-dev.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2024-03-04-projen-pdk-nx.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2024-03-06-trying-tufte-remark.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/_index.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/page/about.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2021-08-27-show-deployments.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2021-09-08-show-deployments-async.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2021-09-11-running-in-cluster.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2021-11-28-creating-images.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2021-11-28-how-many-deployments-amazon-does-in-a-day.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2021-12-04-accelerate-with-feature-flags.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2021-12-18-live-config-updates-spring-configmaps.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2022-01-03-k8s-event-handling.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2022-02-07-fav-k8s-cli-tool.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2022-03-20-fast-java-startup.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2022-11-08-k8s-controller-java.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2022-12-10-cdk-ec2-encrypted-root-disk-dev.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2024-03-04-projen-pdk-nx.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2024-05-12-the-reasons-i-dont-write.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-20-use-git-well.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-21-code-your-own-scaffolding-first.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-22-invest-time-in-planning-mode.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-23-review-diffs-constantly.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-24-use-rule-files-extensively.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-25-write-comprehensive-unit-tests.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-26-create-end-to-end-completion-tests.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-27-build-robust-build-architecture.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-28-keep-dependencies-in-workspace.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-29-generate-reusable-implementation-guides.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-30-implement-cloudwatch-rum.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-31-structure-your-logs-strategically.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-01-document-architectural-constraints.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-02-let-ai-improve-its-own-instructions.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-03-manage-context-window-carefully.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-04-use-code-generators-for-structure.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-05-choose-mcp-servers-judiciously.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-06-use-component-generating-libraries.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-07-maintain-a-styleguide-package.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-08-configure-assistants-for-efficiency.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-09-generate-internal-documentation.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-10-automate-architectural-documentation.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-11-generate-edge-cases-and-stress-tests.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-12-create-integration-contract-tests.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-13-perform-ai-driven-code-reviews.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-14-document-architectural-decisions.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-15-translate-between-tech-stacks.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-16-convert-tests-to-implementations.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-17-generate-observability-as-you-build.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-18-translate-code-to-operational-guides.md",
]
`;

exports[`without filtering 1`] = `
[
  "/Users/acowan/projects/salman/fnjoin.com/content/assets/astronaut.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/assets/blog/authors/jj.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/assets/blog/authors/joe.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/assets/blog/authors/tim.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/assets/blog/dynamic-routing/cover.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/assets/blog/hello-world/cover.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/assets/blog/preview/cover.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/assets/boschfaces.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/assets/port27351.png",
  "/Users/acowan/projects/salman/fnjoin.com/content/assets/salman.jpeg",
  "/Users/acowan/projects/salman/fnjoin.com/content/assets/ship.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/authors/acowan.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/authors/smalik.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2021-08-27-show-deployments.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2021-09-08-show-deployments-async.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2021-09-11-running-in-cluster.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2021-11-28-creating-images.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2021-11-28-how-many-deployments-amazon-does-in-a-day.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2021-12-04-accelerate-with-feature-flags.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2021-12-18-live-config-updates-spring-configmaps.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2022-01-03-k8s-event-handling.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2022-02-07-fav-k8s-cli-tool.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2022-03-20-fast-java-startup.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2022-11-08-k8s-controller-java.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2022-12-10-cdk-ec2-encrypted-root-disk-dev.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2024-03-04-projen-pdk-nx.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/2024-03-06-trying-tufte-remark.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/drafts/_index.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/image-20211114130001416.png",
  "/Users/acowan/projects/salman/fnjoin.com/content/image-20211114133040063.png",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/2021-11-14-reach1m/image-20211114130001416.png",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/2021-11-14-reach1m/image-20211114133040063.png",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/code-your-own-scaffolding/head-img.png",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/fav-k8s-cli-tool/k9s-pods.png",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/feature-flags/14210516939_6d0ebd7b01_c.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/feature-flags/14210516939_e8fc79faae_k.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/feature-flags/claudio-schwarz-yUSLlcOkJnk-unsplash.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/k8s-controller-java/code-organization.png",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/k8s-controller-java/events.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/k8s-controller-java/initializing.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/k8s-controller-java/overview.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/k8s-controller-java/reconcile.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/k8s-event-handling/existing-deploy-failure.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/k8s-event-handling/existing-deploy-success.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/k8s-event-handling/new-deploy-failure.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/k8s-event-handling/new-deploy-success.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/native-compile-breakdown.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/native-vs-standard.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/pdk-projen-nx/diagram.png",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/pdk-projen-nx/head-img.png",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/show-deployments-async/asynchronous-call.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/show-deployments-async/synchronous-call.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/show-pods/asynchronous-call.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/show-pods/synchronous-call.jpg",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/small-iterations/image-20211116155806067.png",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/small-iterations/image-20211124165227230.png",
  "/Users/acowan/projects/salman/fnjoin.com/content/img/the-reasons-i-dont-write/cover.webp",
  "/Users/acowan/projects/salman/fnjoin.com/content/page/about.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2021-08-27-show-deployments.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2021-09-08-show-deployments-async.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2021-09-11-running-in-cluster.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2021-11-28-creating-images.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2021-11-28-how-many-deployments-amazon-does-in-a-day.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2021-12-04-accelerate-with-feature-flags.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2021-12-18-live-config-updates-spring-configmaps.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2022-01-03-k8s-event-handling.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2022-02-07-fav-k8s-cli-tool.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2022-03-20-fast-java-startup.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2022-11-08-k8s-controller-java.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2022-12-10-cdk-ec2-encrypted-root-disk-dev.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2024-03-04-projen-pdk-nx.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2024-05-12-the-reasons-i-dont-write.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-20-use-git-well.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-21-code-your-own-scaffolding-first.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-22-invest-time-in-planning-mode.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-23-review-diffs-constantly.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-24-use-rule-files-extensively.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-25-write-comprehensive-unit-tests.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-26-create-end-to-end-completion-tests.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-27-build-robust-build-architecture.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-28-keep-dependencies-in-workspace.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-29-generate-reusable-implementation-guides.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-30-implement-cloudwatch-rum.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2025-12-31-structure-your-logs-strategically.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-01-document-architectural-constraints.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-02-let-ai-improve-its-own-instructions.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-03-manage-context-window-carefully.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-04-use-code-generators-for-structure.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-05-choose-mcp-servers-judiciously.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-06-use-component-generating-libraries.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-07-maintain-a-styleguide-package.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-08-configure-assistants-for-efficiency.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-09-generate-internal-documentation.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-10-automate-architectural-documentation.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-11-generate-edge-cases-and-stress-tests.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-12-create-integration-contract-tests.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-13-perform-ai-driven-code-reviews.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-14-document-architectural-decisions.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-15-translate-between-tech-stacks.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-16-convert-tests-to-implementations.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-17-generate-observability-as-you-build.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/2026-01-18-translate-code-to-operational-guides.md",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/image-20211114130001416.png",
  "/Users/acowan/projects/salman/fnjoin.com/content/post/image-20211114133040063.png",
]
`;
